{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 383,
  "lineage": "bfa7dad5-fdca-8b17-e7d5-6c7ce6e13ce3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-02191f0f21b586748",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-18-189-19-24.us-east-2.compute.amazonaws.com",
            "public_ip": "18.189.19.24",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a5a9780e8617afe7",
            "arn": "arn:aws:ec2:us-east-2:665302127377:instance/i-045fb40c014d97081",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-045fb40c014d97081",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my_key2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-007311486409b3b1b",
            "private_dns": "ip-172-31-74-237.us-east-2.compute.internal",
            "private_ip": "172.31.74.237",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-2:665302127377:key/b159a118-ba62-4e44-a759-4e587dd25626",
                "throughput": 0,
                "volume_id": "vol-0fa4896ddb56d0b65",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0451891f7256678f2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d0d71c53ec94cc49",
            "tags": {
              "Name": "instance-2"
            },
            "tags_all": {
              "Name": "instance-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0451891f7256678f2"
            ]
          },
          "dependencies": [
            "aws_key_pair.my_key2",
            "aws_security_group.netology-sg",
            "aws_subnet.private",
            "aws_vpc.netology-vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a5a9780e8617afe7",
            "arn": "arn:aws:ec2:us-east-2:665302127377:instance/i-0064e50d5e9ccc792",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0064e50d5e9ccc792",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09b854bd58be9dff0",
            "private_dns": "ip-172-31-33-120.us-east-2.compute.internal",
            "private_ip": "172.31.33.120",
            "public_ip": "13.58.144.84",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-2:665302127377:key/b159a118-ba62-4e44-a759-4e587dd25626",
                "throughput": 0,
                "volume_id": "vol-06cc87409047e7615",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0451891f7256678f2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d15c3d837a7c5cd4",
            "tags": {
              "Name": "instance1"
            },
            "tags_all": {
              "Name": "instance1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0451891f7256678f2"
            ]
          },
          "dependencies": [
            "aws_key_pair.my_key",
            "aws_security_group.netology-sg",
            "aws_subnet.public",
            "aws_vpc.netology-vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "netology-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:665302127377:internet-gateway/igw-0f45196df7facbc6b",
            "id": "igw-0f45196df7facbc6b",
            "owner_id": "665302127377",
            "tags": {
              "Name": "netology-gw"
            },
            "tags_all": {
              "Name": "netology-gw"
            },
            "vpc_id": "vpc-0059d3411bf141651"
          },
          "dependencies": [
            "aws_vpc.netology-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "netology-nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02191f0f21b586748",
            "connectivity_type": "public",
            "id": "nat-0e284b9150494448e",
            "network_interface_id": "eni-0a9e0b49b8b294ec4",
            "private_ip": "172.31.62.125",
            "public_ip": "18.189.19.24",
            "subnet_id": "subnet-0d15c3d837a7c5cd4",
            "tags": {
              "Name": "netology-nat-gw"
            },
            "tags_all": {
              "Name": "netology-nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_subnet.public",
            "aws_vpc.netology-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:665302127377:route-table/rtb-065ffa6f462f203f4",
            "id": "rtb-065ffa6f462f203f4",
            "owner_id": "665302127377",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0e284b9150494448e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route"
            },
            "tags_all": {
              "Name": "private-route"
            },
            "vpc_id": "vpc-0059d3411bf141651"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_nat_gateway.netology-nat-gw",
            "aws_subnet.public",
            "aws_vpc.netology-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:665302127377:route-table/rtb-026ad6b20c5877f5d",
            "id": "rtb-026ad6b20c5877f5d",
            "owner_id": "665302127377",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f45196df7facbc6b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route"
            },
            "tags_all": {
              "Name": "public-route"
            },
            "vpc_id": "vpc-0059d3411bf141651"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.netology-gw",
            "aws_vpc.netology-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "netology-rta1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2e80a0f27580159",
            "route_table_id": "rtb-026ad6b20c5877f5d",
            "subnet_id": "subnet-0d15c3d837a7c5cd4"
          },
          "dependencies": [
            "aws_internet_gateway.netology-gw",
            "aws_route_table.public-route",
            "aws_subnet.public",
            "aws_vpc.netology-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "netology-rta2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06dc60022bd4a3d5a",
            "route_table_id": "rtb-065ffa6f462f203f4",
            "subnet_id": "subnet-0d0d71c53ec94cc49"
          },
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_nat_gateway.netology-nat-gw",
            "aws_route_table.private-route",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.netology-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "netology-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:665302127377:security-group/sg-0451891f7256678f2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0451891f7256678f2",
            "ingress": [],
            "name": "netology-sg",
            "name_prefix": "",
            "owner_id": "665302127377",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0059d3411bf141651"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.netology-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpn_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:665302127377:security-group/sg-001fbc2e29551de20",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-001fbc2e29551de20",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Incoming VPN connection",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vpn-netology-sg",
            "name_prefix": "",
            "owner_id": "665302127377",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0059d3411bf141651"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.netology-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": -1,
            "id": "sgrule-2140260129",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-0451891f7256678f2",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.netology-sg",
            "aws_vpc.netology-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2775251934",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0451891f7256678f2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.netology-sg",
            "aws_vpc.netology-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:665302127377:subnet/subnet-0d0d71c53ec94cc49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "172.31.64.0/19",
            "id": "subnet-0d0d71c53ec94cc49",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "665302127377",
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "vpc_id": "vpc-0059d3411bf141651"
          },
          "dependencies": [
            "aws_vpc.netology-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:665302127377:subnet/subnet-0d15c3d837a7c5cd4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.31.32.0/19",
            "id": "subnet-0d15c3d837a7c5cd4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "665302127377",
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "vpc_id": "vpc-0059d3411bf141651"
          },
          "dependencies": [
            "aws_vpc.netology-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "netology-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:665302127377:vpc/vpc-0059d3411bf141651",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0d9533401da075fc9",
            "default_route_table_id": "rtb-08a5295f8a6dc7761",
            "default_security_group_id": "sg-09635863be75adbde",
            "dhcp_options_id": "dopt-0478fbb3851b63d70",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0059d3411bf141651",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08a5295f8a6dc7761",
            "owner_id": "665302127377",
            "tags": {
              "Name": "netology-vpc"
            },
            "tags_all": {
              "Name": "netology-vpc"
            }
          }
        }
      ]
    }
  ]
}